# web-chatbot-host

./: .gitignore  pyproject.toml
app/: chain_utils.py  config.py  intent_router.py  llm_loader.py  main.py  prompts.py  vectorstore_loader.py
app/faiss_index/: index.faiss  index.pkl
